@@ -66,6 +66,7 @@ $outdent_print = \&outdent_text_print;
 
 # Parse command-line args
 $asowner = 0;
+$opts{'mail'}->{'mailfiles'} = 1;
 while(@ARGV > 0) {
 	local $a = shift(@ARGV);
 	if ($a eq "--dest") {
@@ -131,7 +132,12 @@ while(@ARGV > 0) {
 		}
 	elsif ($a eq "--mailfiles") {
 		# Convenience flag for --option mail mailfiles 1
+		# Deprecated, as this is on by default now
 		$opts{'mail'}->{'mailfiles'} = 1;
+		}
+	elsif ($a eq "--no-mailfiles") {
+		# Convenience flag for --option mail mailfiles 0
+		$opts{'mail'}->{'mailfiles'} = 0;
 		}
 	elsif ($a eq "--as-owner") {
 		# Run as domain owner
@@ -253,7 +259,7 @@ if (&has_incremental_tar()) {
 	}
 print "                        [--all-virtualmin] | [--virtualmin config]\n";
 print "                        [--option feature name value]\n";
-print "                        [--mailfiles]\n";
+print "                        [--no-mailfiles]\n";
 print "                        [--as-owner]\n";
 print "\n";
 print "Multiple domains may be specified with multiple --domain parameters.\n";
