@@ -64,6 +64,7 @@ $indent_print = \&indent_text_print;
 $outdent_print = \&outdent_text_print;
 
 # Parse command-line args
+$opts{'mail'}->{'mailfiles'} = 1;
 while(@ARGV > 0) {
 	local $a = shift(@ARGV);
 	if ($a eq "--source") {
@@ -116,7 +117,12 @@ while(@ARGV > 0) {
 		}
 	elsif ($a eq "--mailfiles") {
 		# Convenience flag for --option mail mailfiles 1
+		# Deprecated, as this is on by default now
 		$opts{'mail'}->{'mailfiles'} = 1;
+		}
+	elsif ($a eq "--no-mailfiles") {
+		# Convenience flag for --option mail mailfiles 0
+		$opts{'mail'}->{'mailfiles'} = 0;
 		}
 	elsif ($a eq "--virtualmin") {
 		$v = shift(@ARGV);
@@ -260,6 +266,7 @@ print "                                     [--except-feature name]\n";
 print "                  [--reuid]\n";
 print "                  [--fix]\n";
 print "                  [--option feature name value]\n";
+print "                  [--no-mailfiles]\n";
 print "                  [--all-virtualmin] | [--virtualmin config]\n";
 print "                  [--only-features]\n";
 print "                  [--shared-ip address | --ip address | --allocate-ip]\n";
