@@ -1022,3 +1022,4 @@ Virtual server backups can now be in ZIP format, by changing the 'Backup compres
 When submitting a new SSL certificate and key, they are checked to ensure a modulus match, ensuring that they were generated and can be used together.
 ---- Changes since 3.63 ----
 Updated the PHPlist script installer to version 2.10.8, bbPress to 0.9.0.3, Wordpress to 2.7, Drupal to 6.8 and 5.14, Horde to 3.3.2, IMP to 4.3.2, Turba to 2.3.1, SugarCRM to 5.1.0c, phpBB to 3.0.4, and phpMyAdmin to 3.1.1.
+Mail files are now included by default in backups made and restored using backup-domain.pl and restore-domain.pl. This can be disabled with the --no-mailfiles parameter.
